# Kkrieger-Werkkzeug3

./: .gitignore  LICENSE  README.MD
.github/workflows/: build_werkkzeug3.yml
docs/: index.md
genthree/: genthree.vcproj  genthree.vcxproj  ronan.cpp
kkrunchy/: kkrunchy.vcproj  kkrunchy.vcxproj
nasm-0.99.05-win32/: AUTHORS  CHANGES  ChangeLog  INSTALL  LICENSE  Makefile.in  README  TODO  aclocal.m4  assemble.c  assemble.h  autogen.sh  compiler.h  config.h.in  configure  configure.in  crc64.c  disasm.c  disasm.h  eval.c  eval.h  exprlib.c  float.c  float.h  hashtbl.c  hashtbl.h  insns.h  insns.pl  insnsa.c  insnsd.c  insnsi.h  insnsn.c  install-sh  labels.c  labels.h  listing.c  listing.h  macros.c  macros.pl  mkdep.pl  (+39 more)
nasm-0.99.05-win32/Mkfiles/: README  msvc.mak  openwcom.mak  owlinux.mak
nasm-0.99.05-win32/doc/: Makefile  Makefile.in  afmmetrics.pl  genps.pl  genpsdriver.pl  head.ps  insref.src  internal.doc  makedocs.bat  nasmdoc.src  nasmlogo.eps  opt_var.txt  psfonts.ph  pswidth.ph  rdsrc.pl
nasm-0.99.05-win32/doc/metrics/: pagd8a.ph  pagdo8a.ph  pagk8a.ph  pagko8a.ph  pbkd8a.ph  pbkdi8a.ph  pbkl8a.ph  pbkli8a.ph  pcrb8a.ph  pcrbo8a.ph  pcrr8a.ph  pcrro8a.ph  phvb8a.ph  phvb8an.ph  phvbo8a.ph  phvbo8an.ph  phvl8a.ph  phvlo8a.ph  phvr8a.ph  phvr8an.ph  phvro8a.ph  phvro8an.ph  pncb8a.ph  pncbi8a.ph  pncr8a.ph  pncri8a.ph  pplb8a.ph  pplbi8a.ph  pplr8a.ph  pplri8a.ph  psyr.ph  ptmb8a.ph  ptmbi8a.ph  ptmr8a.ph  ptmri8a.ph  putb8a.ph  putbi8a.ph  putr8a.ph  putri8a.ph  pzcmi8a.ph  (+1 more)
nasm-0.99.05-win32/lcc/: README  bind.c  lin-aout.c  lin-elf.c  x86nasm.md
nasm-0.99.05-win32/lib/: snprintf.c  vsnprintf.c
nasm-0.99.05-win32/misc/: Doxyfile  Nindent  README  c32.mac  exebin2.mac  findleak.pl  findleak.txt  fmtinsns.pl  hints.txt  makedist.sh  myC32.mac  nasm.sl  nasmstab  pmw.bat  proc32.ash  release  scitech.mac
nasm-0.99.05-win32/output/: outaout.c  outas86.c  outbin.c  outcoff.c  outdbg.c  outelf32.c  outelf64.c  outieee.c  outmacho.c  outobj.c  outrdf.c  outrdf2.c
nasm-0.99.05-win32/perllib/: Graph.pm  Graph.pod  README  crc64.ph  phash.ph  random_sv_vectors.ph
nasm-0.99.05-win32/perllib/Graph/: AdjacencyMap.pm  AdjacencyMatrix.pm  Attribute.pm  BitMatrix.pm  Directed.pm  MSTHeapElem.pm  Matrix.pm  SPTHeapElem.pm  TransitiveClosure.pm  Traversal.pm  Undirected.pm  UnionFind.pm
nasm-0.99.05-win32/perllib/Graph/AdjacencyMap/: Heavy.pm  Light.pm  Vertex.pm
nasm-0.99.05-win32/perllib/Graph/TransitiveClosure/: Matrix.pm
nasm-0.99.05-win32/perllib/Heap071/: Elem.pm  Fibonacci.pm
nasm-0.99.05-win32/rdoff/: Makefile.in  README  collectn.c  collectn.h  hash.c  hash.h  ldrdf.c  ldsegs.h  rdf2bin.c  rdf2ihx.c  rdfdump.c  rdflib.c  rdfload.c  rdfload.h  rdlar.c  rdlar.h  rdlib.c  rdlib.h  rdoff.c  rdoff.h  rdx.c  segtab.c  segtab.h  symtab.c  symtab.h
nasm-0.99.05-win32/rdoff/Mkfiles/: Makefile.dj  Makefile.emx  Makefile.sc  Makefile.unx  README
nasm-0.99.05-win32/rdoff/doc/: Makefile  rdoff.texi  v1-v2.txt
nasm-0.99.05-win32/rdoff/test/: Makefile  makelib.sh  rdfseg.asm  rdfseg2.asm  rdftest1.asm  rdftest2.asm  rdtlib.asm  rdtmain.asm  testlib.asm
nasm-0.99.05-win32/test/: Makefile  a32offs.asm  absolute.asm  aouttest.asm  binexe.asm  bintest.asm  br560575.asm  br560873.asm  changed.asm  cofftest.asm  elfso.asm  elftest.c  elif.asm  expimp.asm  float.asm  floatb.asm  floatexp.asm  floattest.asm  floatx.asm  fmsub.asm  ifmacro.asm  inctest.asm  invlpga.asm  larlsl.asm  lnxhello.asm  loopoffs.asm  mmxsize.asm  movimm.asm  multisection.asm  nasmformat.asm  nullfile.asm  org.asm  r13.asm  riprel.asm  riprel.pl  test67.asm  testdos.asm  testnos3.asm  zerobyte.asm
v2/in_v2m/: in_v2m.vcproj  in_v2m.vcxproj
v2/libv2/: libv2.vcproj
v2/vsti/: vsti.vcproj  vsti.vcxproj
werkkzeug3_kkrieger/: _gui.cpp  _iob.cpp  _iob.hpp  _loader.cpp  _start.cpp  _types.cpp  _types.hpp  _viruz2.cpp  appbrowser.cpp  clean_everything.bat  genbitmap.cpp  genmesh.cpp  genminmesh.cpp  genoverlay.cpp  kdoc.cpp  kdoc.hpp  mainplayer.cpp  mapfile.cpp  mapfile.hpp  meson.build  notes.txt  novaplayer.hpp  pdbfile.cpp  werkclass.cpp  werkclass.hpp  werkkzeug.cpp  werkkzeug3.vcproj  werkkzeug3.vcxproj  werkkzeug3.vcxproj.filters  werkops.cpp  winpara.cpp  winview.cpp  wz3projects.sln
werkkzeug3_kkrieger/base/: base.vcproj  base.vcxproj  base.vcxproj.filters  base_config.hpp
werkkzeug3_kkrieger/base_console/: _startconsole.cpp  base_console.vcxproj  base_console.vcxproj.filters  meson.build
werkkzeug3_kkrieger/data/: debris_chaos.kx  intro.kx  intro_annotated.k  intro_annotated2.k
werkkzeug3_kkrieger/example_cube/: example_cube.vcxproj
werkkzeug3_kkrieger/fried/: fried.vcxproj  quantize.cpp
werkkzeug3_kkrieger/materials/: material11.cpp  material20_envips.hpp  material20_envivs.hpp  material20_fatps.hpp  material20_fatvs.hpp  material20_lightps.hpp  material20_lightvs.hpp  material20_texps.hpp  material20_texvs.hpp  material20_vcolorps.hpp  material20_vcolorvs.hpp  material20_zfillps.hpp  material20_zfillvs.hpp  materials.vcxproj  meson.build
werkkzeug3_kkrieger/player_demo/: player_demo.vcproj  player_demo.vcxproj  player_demo.vcxproj.filters
werkkzeug3_kkrieger/player_intro/: meson.build  player_intro.vcproj  player_intro.vcxproj  player_intro.vcxproj.filters
werkkzeug3_kkrieger/player_kkrieger/: kkrieger_config.hpp  player_kkrieger.vcproj  player_kkrieger.vcxproj  player_kkrieger.vcxproj.filters
werkkzeug3_kkrieger/pngloader/: pngloader.vcxproj
werkkzeug3_kkrieger/shadercompile/: main.cpp  meson.build  shadercompile.vcxproj
werkkzeug3_kkrieger/werkkzeug3/: effect_colorcorrectps.hpp  effect_colorcorrectvs.hpp  effect_glare2ps.hpp  effect_glare2vs.hpp  effect_glare3ps.hpp  effect_glare3vs.hpp  effect_glareps.hpp  effect_glarevs.hpp  effect_jpegps.hpp  effect_jpegvs.hpp  werkkzeug.config  werkkzeug3.vcproj  werkkzeug3.vcxproj  werkkzeug3.vcxproj.filters  wz3_data.asm
(+2 files in other folders)
